overflow x fixed

--- a/frontend/src/components/Forms/StacksForm/StacksForm.module.css
+++ b/frontend/src/components/Forms/StacksForm/StacksForm.module.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   opacity: 50%;
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 
 .addStack:hover {
